# src/controllers/vouch/add.ts
@@ -1,29 +1,39 @@
 import { RequestHandler } from 'express';
 import Joi from '@hapi/joi';
+import ethers from 'ethers';
 import requestMiddleware from '../../middleware/request-middleware';
 import Vouch from '../../models/Vouch';
 
-export const addVouchSchema = Joi.object().keys({
+const addVouchSchema = Joi.object().keys({
   submissionId: Joi.string().required(),
-  vouchers: Joi.array().items(Joi.string()).min(1).required(),
-  signatures: Joi.array().items(Joi.string()).min(1).required(),
-  expirationTimetamps: Joi.array().items(Joi.number().required()).min(1).required()
+  signature: Joi.string().required(),
+  digest: Joi.string().required(),
+  expirationTimestamps: Joi.number().required()
 });
 
 const add: RequestHandler = async (req, res) => {
   const {
     submissionId,
-    vouchers,
-    signatures,
-    expirationTimetamps
+    signature,
+    digest,
+    expirationTimestamp
   } = req.body;
 
-  const vouch = new Vouch({
-    submissionId,
-    vouchers,
-    signatures,
-    expirationTimetamps
-  });
+  let vouch = await Vouch.findOne({ submissionId: new RegExp(`.*${submissionId}.*`, 'i') });
+  const voucherAddr = ethers.utils.recoverAddress(digest, signature);
+  if (!vouch) {
+    vouch = new Vouch({
+      submissionId,
+      vouchers: [voucherAddr],
+      signatures: [signature],
+      expirationTimestamps: [expirationTimestamp]
+    });
+  } else {
+    vouch.signatures = [...vouch.signatures, signature];
+    vouch.vouchers = [...vouch.vouchers, voucherAddr];
+    vouch.expirationTimestamps = [...vouch.expirationTimestamps, expirationTimestamp];
+  }
+
   await vouch.save();
 
   res.send({
